modified injected-string to create response object with all params
